--- a/src/app/pages/news/news.page.html
+++ b/src/app/pages/news/news.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Trending Movies</ion-title>
+    <ion-title>Latest news in {{topic}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
