added proper linking

--- a/src/app/pages/news-story/news-story.page.html
+++ b/src/app/pages/news-story/news-story.page.html
@@ -19,6 +19,9 @@
       <ion-label color="medium">{{ newsArticle.description }}</ion-label>
     </ion-card-content>
   </ion-card>
+
+  <a>{{newsArticle.url}}</a>
+
 </ion-content>
 
 <ion-footer>
